# GithubRepoandMarkdown

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
db/: sample_queries.sql  schema.sql  seed.sql
docs/: architecture_decision_records.md  assumptions_scope.md  data_design.md  tech_stack_decision_records.md
src/: __init__.py  app.py  consolidator.py  db.py  report.py
src/consolidator/: __init__.py  __main__.py  aligner.py  filters.py  io.py  models.py  reports.py
tests/: test_consolidation.py  test_consolidator_align.py  test_consolidator_filters.py  test_consolidator_io.py  test_consolidator_reports.py
